noinst_PROGRAMS = example_queue example_list

example_queue_SOURCES = example_queue.c
example_queue_LDADD = ../oc/liboc.la
example_queue_CPPFLAGS = -I$(top_srcdir)/src
example_queue_CFLAGS = -Wall -Werror

example_list_SOURCES = example_list.c
example_list_LDADD = ../oc/liboc.la
example_list_CPPFLAGS = -I$(top_srcdir)/src
example_list_CFLAGS = -Wall -Werror

