liboc_libdir = $(libdir)/oc
liboc_lib_LTLIBRARIES = liboc.la
liboc_la_SOURCES = new.c object.c queue.c fifo.c lifo.c list.c chardev.c
liboc_la_LDFLAGS = -version-info 0:0:0
liboc_includedir = $(includedir)/oc
liboc_include_HEADERS = new.h object.h queue.h fifo.h lifo.h list.h chardev.h
liboc_la_CFLAGS = -Wall -Werror
